Final Project 4th Prerelease

--- a/index.html
+++ b/index.html
@@ -27,20 +27,19 @@
                             <a href="pages/resume.html">Resume </a>
                             <a href="pages/contact.html">Contact </a>
                         </div> 
-                        
                     </div>
                     <div class="col-2 col-md-auto padding-0 ">
                     <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0 headerFooter__contactLogosList ">   
-                        <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="images/github.png" alt="github link"></a></li>
-                        <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="images/linkedin.png" alt="linkedin link"></a></li>
-                        <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="images/gmail.png" alt="mail link"></a></li>
+                        <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="images/github.png" alt="githubLink"></a></li>
+                        <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="images/linkedin.png" alt="linkedinLink"></a></li>
+                        <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="images/gmail.png" alt="mailLink"></a></li>
                     </ul> 
                     </div>
             </div>
         </header>
         <section class="row align-items-center justify-content-center section__myPhoto">
             <div class="col-12">
-                <img src="images/gs_photo.png" alt="my photo">
+                <img src="images/gs_photo.png" alt="myPhoto">
             </div>
         </section>
         <div class="row align-items-center justify-content-center mt-0">
@@ -49,13 +48,13 @@
             </div>
         </div>
         <div class="row align-items-center justify-content-center mt-0">
-            <div class="col-11 col-md-9 col-lg-7 col-xl-6 background-color-09 mb-4">
+            <div class="col-11 col-md-9 col-xl-6 radial-gradient mb-4">
                 <section>
-                    <p>Hi, my name is German Siliprandi, I live in Buenos Aires, Argentina, and I'm a chemical engineer turned web designer.</p>
-                    <p> It was about 2018 when I found out that I loved programming, first in python and then Javascript.</p>
-                    <p>In 2021 I realized I wanted to be a Digital Nomad, and started the "Full stack Web developer" career in Coderhouse, in order to specialize and work in what I love and travel with my girlfriend at the same time. </p>
-                    <p> I'm currently expanding my personal portfolio and seeking for a job as a web developer</p>
-                    <p>For more Information about my works and myself, click on the "Works", "About", and "Resume" links in the Menu</p>
+                    <p class="mt-1 mb-1">Hi, my name is German Siliprandi, I live in Buenos Aires, Argentina, and I'm a chemical engineer turned web designer.</p>
+                    <p class="mt-1 mb-1"> It was about 2018 when I found out that I loved programming, first in python and then Javascript.</p>
+                    <p class="mt-1 mb-1">In 2021 I realized I wanted to be a Digital Nomad, and started the "Full stack Web developer" career in Coderhouse, in order to specialize and work in what I love and travel with my girlfriend at the same time. </p>
+                    <p class="mt-1 mb-1"> I'm currently expanding my personal portfolio and seeking for a job as a web developer</p>
+                    <p class="mt-1 mb-1">For more Information about my works and myself, click on the "Works", "About", and "Resume" links in the Menu</p>
                 </section> 
             </div>
         </div>
@@ -77,13 +76,13 @@
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <a href="https://germansiliprandi.github.io/Desafio12/"><img src="images/work1.png" class="d-block w-100" alt="recent work 1"></a>
+                                    <a href="https://germansiliprandi.github.io/Desafio12/"><img src="images/work1.png" class="d-block w-100" alt="recentWork1"></a>
                                 </div>
                                 <div class="carousel-item">
-                                    <a href="https://github.com/GermanSiliprandi/canvas-test"><img src="images/work2.png" class="d-block w-100" alt="recent work 2"></a>
+                                    <a href="https://github.com/GermanSiliprandi/canvas-test"><img src="images/work2.png" class="d-block w-100" alt="recentWork2"></a>
                                 </div>
                                 <div class="carousel-item">
-                                    <a href="https://github.com/GermanSiliprandi/guessing-game"><img src="images/work3.png" class="d-block w-100" alt="recent work 3"></a>
+                                    <a href="https://github.com/GermanSiliprandi/guessing-game"><img src="images/work3.png" class="d-block w-100" alt="recentWork3"></a>
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -109,9 +108,9 @@
                 </div>
                 <div class="col-2 padding-0">
                     <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0 headerFooter__contactLogosList ">   
-                        <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="images/github.png" alt="github link"></a></li>
-                        <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="images/linkedin.png" alt="linkedin link"></a></li>
-                        <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="images/gmail.png" alt="mail link"></a></li>
+                        <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="images/github.png" alt="githubLink"></a></li>
+                        <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="images/linkedin.png" alt="linkedinLink"></a></li>
+                        <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="images/gmail.png" alt="mailLink"></a></li>
                     </ul> 
                 </div>
             </div>
