--- a/pages/about.html
+++ b/pages/about.html
@@ -24,13 +24,13 @@
             </ul>
         </nav>
         <ul class="headerFooter__contactLogos">
-            <li><a href="https://github.com/GermanSiliprandi"><img src="../images/github.png" alt="github link"></a></li>
-            <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img src="../images/linkedin.png" alt="linkedin link"></a></li>
-            <li><a href="mailto:german.siliprandi@gmail.com"><img src="../images/gmail.png" alt="mail link"></a></li>
+            <li><a href="https://github.com/GermanSiliprandi"><img src="../images/github.png" alt="githubLink"></a></li>
+            <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img src="../images/linkedin.png" alt="linkedinLink"></a></li>
+            <li><a href="mailto:german.siliprandi@gmail.com"><img src="../images/gmail.png" alt="mailLink"></a></li>
         </ul> 
     </header>
     <section class="section__myPhoto">
-        <img src="../images/gs_photo.png" alt="my photo">
+        <img src="../images/gs_photo.png" alt="myPhoto">
     </section>
     <main class="main__about">
         <section>
@@ -51,7 +51,9 @@
                 <p>
                     I also discovered I wanted to be a Digital Nomad so I can travel the world with my girlfriend while doing what I love.
                 </p>
+                <p>
                     I know I didn't have the shortest path to becoming a Full Stack Web Developer, but I'm really happy I found the career and the job I love doing :D.
+                </p>
                 <p>
                     I hope you know what you want to do with your life, and if you don't, I REALLY hope you find it as I did.
                 </p>
@@ -62,9 +64,9 @@
         <a  href="../index.html" class="headerFooter__logo"><img src="../images/logo.png" alt="logo"></a>
         <p>Designed by German Siliprandi</p>
         <ul class="headerFooter__contactLogos">   
-            <li><a href="https://github.com/GermanSiliprandi"><img src="../images/github.png" alt="github link"></a></li>
-            <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img src="../images/linkedin.png" alt="linkedin link"></a></li>
-            <li><a href="mailto:german.siliprandi@gmail.com"><img src="../images/gmail.png" alt="mail link"></a></li>
+            <li><a href="https://github.com/GermanSiliprandi"><img src="../images/github.png" alt="githubLink"></a></li>
+            <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img src="../images/linkedin.png" alt="linkedinLink"></a></li>
+            <li><a href="mailto:german.siliprandi@gmail.com"><img src="../images/gmail.png" alt="mailLink"></a></li>
         </ul> 
     </footer> 
 </body>
