--- a/pages/works.html
+++ b/pages/works.html
@@ -31,9 +31,9 @@
                 </div>
                 <div class="col-2 col-md-auto padding-0">
                     <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0 headerFooter__contactLogosList">   
-                        <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="../images/github.png" alt="github link"></a></li>
-                        <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="../images/linkedin.png" alt="linkedin link"></a></li>
-                        <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="../images/gmail.png" alt="mail link"></a></li>
+                        <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="../images/github.png" alt="githubLink"></a></li>
+                        <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="../images/linkedin.png" alt="linkedinLink"></a></li>
+                        <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="../images/gmail.png" alt="mailLink"></a></li>
                     </ul> 
                 </div>
             </div>
@@ -56,13 +56,13 @@
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <a href="https://germansiliprandi.github.io/Desafio12/"><img src="../images/work1.png" class="d-block w-100" alt="recent work 1"></a>
+                                    <a href="https://germansiliprandi.github.io/Desafio12/"><img src="../images/work1.png" class="d-block w-100" alt="recentWork1"></a>
                                 </div>
                                 <div class="carousel-item">
-                                    <a href="https://github.com/GermanSiliprandi/canvas-test"><img src="../images/work2.png" class="d-block w-100" alt="recent work 2"></a>
+                                    <a href="https://github.com/GermanSiliprandi/canvas-test"><img src="../images/work2.png" class="d-block w-100" alt="recentWork2"></a>
                                 </div>
                                 <div class="carousel-item">
-                                    <a href="https://github.com/GermanSiliprandi/guessing-game"><img src="../images/work3.png" class="d-block w-100" alt="recent work 3"></a>
+                                    <a href="https://github.com/GermanSiliprandi/guessing-game"><img src="../images/work3.png" class="d-block w-100" alt="recentWork3"></a>
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -89,19 +89,19 @@
                     <th>What I did</th>
                 </tr>
                 <tr>
-                    <td><a href="https://germansiliprandi.github.io/Desafio12/"><img src="../images/work1.png" alt="work 1"></a></td>
+                    <td><a href="https://germansiliprandi.github.io/Desafio12/"><img src="../images/work1.png" alt="work1"></a></td>
                     <td><time>September 2021</time> </td>
                     <td>While learning SASS and its functionalities,I translated the .css of a prototype of my current page to a .scss file</td>
                     <td>Front End, SASS</td>
                 </tr>
                 <tr>
-                    <td><a href="https://github.com/GermanSiliprandi/canvas-test"><img src="../images/work2.png" alt="work 2"></a></td>
+                    <td><a href="https://github.com/GermanSiliprandi/canvas-test"><img src="../images/work2.png" alt="work2"></a></td>
                     <td><time>June 2021</time></td>
                     <td>While learning canvas and Javascript I made a basic Script where you enter the lines you want in a canvas drawing</td>
                     <td> Front End, Javascript</td>
                 </tr> 
                 <tr>
-                    <td><a href="https://github.com/GermanSiliprandi/guessing-game"><img src="../images/work3.png" alt="work 3"></a></td>
+                    <td><a href="https://github.com/GermanSiliprandi/guessing-game"><img src="../images/work3.png" alt="work3"></a></td>
                     <td><time>May 2021</time></td>
                     <td> I made a guessing game in python </td>
                     <td> Programming, Games </td>
@@ -118,9 +118,9 @@
                 </div>
                 <div class="col-2 padding-0">
                     <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0 ">   
-                        <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="../images/github.png" alt="github link"></a></li>
-                        <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="../images/linkedin.png" alt="linkedin link"></a></li>
-                        <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="../images/gmail.png" alt="mail link"></a></li>
+                        <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="../images/github.png" alt="githubLink"></a></li>
+                        <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="../images/linkedin.png" alt="linkedinLink"></a></li>
+                        <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="../images/gmail.png" alt="mailLink"></a></li>
                     </ul> 
                 </div>
             </div>
