--- a/pages/resume.html
+++ b/pages/resume.html
@@ -25,15 +25,15 @@
                 </ul>
             </nav>
             <ul class="headerFooter__contactLogos">
-                <li><a href="https://github.com/GermanSiliprandi"><img src="../images/github.png" alt="github link"></a></li>
-                <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img src="../images/linkedin.png" alt="linkedin link"></a></li>
-                <li><a href="mailto:german.siliprandi@gmail.com"><img src="../images/gmail.png" alt="mail link"></a></li>
+                <li><a href="https://github.com/GermanSiliprandi"><img src="../images/github.png" alt="githubLink"></a></li>
+                <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img src="../images/linkedin.png" alt="linkedinLink"></a></li>
+                <li><a href="mailto:german.siliprandi@gmail.com"><img src="../images/gmail.png" alt="mailLink"></a></li>
             </ul>
         </header>
         <main class="main__Resume">
             <article>
                 <section class="main__imageResume">
-                    <img  src="../images/gs_photo.png" alt="my photo">
+                    <img  src="../images/gs_photo.png" alt="myPhoto">
                 </section>
                 <section class="main__personalInfoResume">
                     <h1>Personal Information</h1>
@@ -144,9 +144,9 @@
             <a class="headerFooter__logo" href="../index.html"><img src="../images/logo.png" alt="logo"></a>
             <p>Designed by German Siliprandi</p>
             <ul class="headerFooter__contactLogos">   
-                <li><a href="https://github.com/GermanSiliprandi"><img src="../images/github.png" alt="github link"></a></li>
-                <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img src="../images/linkedin.png" alt="linkedin link"></a></li>
-                <li><a href="mailto:german.siliprandi@gmail.com"><img src="../images/gmail.png" alt="mail link"></a></li>
+                <li><a href="https://github.com/GermanSiliprandi"><img src="../images/github.png" alt="githubLink"></a></li>
+                <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img src="../images/linkedin.png" alt="linkedinLink"></a></li>
+                <li><a href="mailto:german.siliprandi@gmail.com"><img src="../images/gmail.png" alt="mailLink"></a></li>
             </ul> 
         </footer>
     </div>
