--- a/pages/works.html
+++ b/pages/works.html
@@ -79,34 +79,42 @@
             </article> 
         </main> 
         <article>
-            <h1>All My Works</h1>
+            <div class="row">
+                <div class="col-12 justify-content-center mt-0">
+                    <h1>All My Works</h1>
+                </div>
+            </div>
             <!-- Click on the Table images and go to my github works pages-->
-            <table class=" table mb-4 table-bordered align-middle">
-                <tr>
-                    <th>Work</th>
-                    <th>Date</th>
-                    <th>Brief Description</th>
-                    <th>What I did</th>
-                </tr>
-                <tr>
-                    <td><a href="https://germansiliprandi.github.io/Desafio12/"><img src="../images/work1.png" alt="work1"></a></td>
-                    <td><time>September 2021</time> </td>
-                    <td>While learning SASS and its functionalities,I translated the .css of a prototype of my current page to a .scss file</td>
-                    <td>Front End, SASS</td>
-                </tr>
-                <tr>
-                    <td><a href="https://github.com/GermanSiliprandi/canvas-test"><img src="../images/work2.png" alt="work2"></a></td>
-                    <td><time>June 2021</time></td>
-                    <td>While learning canvas and Javascript I made a basic Script where you enter the lines you want in a canvas drawing</td>
-                    <td> Front End, Javascript</td>
-                </tr> 
-                <tr>
-                    <td><a href="https://github.com/GermanSiliprandi/guessing-game"><img src="../images/work3.png" alt="work3"></a></td>
-                    <td><time>May 2021</time></td>
-                    <td> I made a guessing game in python </td>
-                    <td> Programming, Games </td>
-                </tr>
-            </table>
+            <div class="row justify-content-center">
+                <div class="col-auto">
+                    <table class=" table table-bordered align-middle ">
+                        <tr>
+                            <th>Work</th>
+                            <th>Date</th>
+                            <th>Brief Description</th>
+                            <th>What I did</th>
+                        </tr>
+                        <tr>
+                            <td><a href="https://germansiliprandi.github.io/Desafio12/"><img src="../images/work1.png" alt="work1"></a></td>
+                            <td><time>September 2021</time> </td>
+                            <td>While learning SASS and its functionalities,I translated the .css of a prototype of my current page to a .scss file</td>
+                            <td>Front End, SASS</td>
+                        </tr>
+                        <tr>
+                            <td><a href="https://github.com/GermanSiliprandi/canvas-test"><img src="../images/work2.png" alt="work2"></a></td>
+                            <td><time>June 2021</time></td>
+                            <td>While learning canvas and Javascript I made a basic Script where you enter the lines you want in a canvas drawing</td>
+                            <td> Front End, Javascript</td>
+                        </tr> 
+                        <tr>
+                            <td><a href="https://github.com/GermanSiliprandi/guessing-game"><img src="../images/work3.png" alt="work3"></a></td>
+                            <td><time>May 2021</time></td>
+                            <td> I made a guessing game in python </td>
+                            <td> Programming, Games </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
         </article>
         <footer>
             <div class="row background-color-09 align-items-center justify-content-between headerFooter__height">
