--- a/pages/works.html
+++ b/pages/works.html
@@ -56,7 +56,7 @@
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <a href="https://germansiliprandi.github.io/Desafio12/"><img src="../images/work1.png" class="d-block w-100" alt="recentWork1"></a>
+                                    <a href="https://github.com/GermanSiliprandi/Desafio12"><img src="../images/work1.png" class="d-block w-100" alt="recentWork1"></a>
                                 </div>
                                 <div class="carousel-item">
                                     <a href="https://github.com/GermanSiliprandi/canvas-test"><img src="../images/work2.png" class="d-block w-100" alt="recentWork2"></a>
@@ -95,7 +95,7 @@
                             <th>What I did</th>
                         </tr>
                         <tr>
-                            <td><a href="https://germansiliprandi.github.io/Desafio12/"><img src="../images/work1.png" alt="work1"></a></td>
+                            <td><a href="https://github.com/GermanSiliprandi/Desafio12"><img src="../images/work1.png" alt="work1"></a></td>
                             <td><time>September 2021</time> </td>
                             <td>While learning SASS and its functionalities,I translated the .css of a prototype of my current page to a .scss file</td>
                             <td>Front End, SASS</td>
