--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <a href="https://germansiliprandi.github.io/Desafio12/"><img src="images/work1.png" class="d-block w-100" alt="recentWork1"></a>
+                                    <a href="https://github.com/GermanSiliprandi/Desafio12"><img src="images/work1.png" class="d-block w-100" alt="recentWork1"></a>
                                 </div>
                                 <div class="carousel-item">
                                     <a href="https://github.com/GermanSiliprandi/canvas-test"><img src="images/work2.png" class="d-block w-100" alt="recentWork2"></a>
