--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <!--Bootstrap Index-->
     <div class="container-fluid">
         <header class="sticky-top">
-            <div class="row mb-4 background-color-07 align-items-center justify-content-between headerFooter__height">
-                    <div class="col-2 col-md-auto padding-0">
+            <div class="row d-none d-md-flex mb-4 background-color-07 align-items-center justify-content-between headerFooter__height">
+                    <div class="col-md-auto padding-0">
                     <a href="index.html"><img class="headerFooter__logo float-start" src="images/logo.png" alt="logo"></a>
                     </div>
-                    <div class="col-8 col-md-7 col-xl-6 justify-content-between padding-0  ">
+                    <div class=" col-md-7 col-xl-6 justify-content-between padding-0  ">
                         <div class="navbar padding-0  ">
                             <a href="index.html">Home </a>
                             <a href="pages/works.html">Works </a>
@@ -28,7 +28,7 @@
                             <a href="pages/contact.html">Contact </a>
                         </div> 
                     </div>
-                    <div class="col-2 col-md-auto padding-0 ">
+                    <div class="col-md-auto padding-0 ">
                     <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0 headerFooter__contactLogosList ">   
                         <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="images/github.png" alt="githubLink"></a></li>
                         <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="images/linkedin.png" alt="linkedinLink"></a></li>
@@ -36,6 +36,32 @@
                     </ul> 
                     </div>
             </div>
+            <div class="row d-flex d-md-none mb-4 background-color-07 align-items-center justify-content-between headerFooter__height">
+                <div class="col-auto padding-0">
+                <a href="index.html"><img class="headerFooter__logo float-start" src="images/logo.png" alt="logo"></a>
+                </div>
+                <div class=" col-auto padding-0 ">
+                    <a class="nav-link dropdown" data-bs-toggle="dropdown" href="" role="button" aria-expanded="false"><img src="/images/mobile_menu.png" alt="mobileMenu"></a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item bold" href="index.html">Home</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item bold" href="/pages/works.html">Works</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item bold" href="/pages/about.html">About</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item bold" href="/pages/resume.html">Resume</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item bold" href="/pages/contact.html">Contact</a></li>
+                        </ul>
+                </div>
+                <div class="col-auto padding-0 ">
+                <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0 headerFooter__contactLogosList ">   
+                    <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="images/github.png" alt="githubLink"></a></li>
+                    <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="images/linkedin.png" alt="linkedinLink"></a></li>
+                    <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="images/gmail.png" alt="mailLink"></a></li>
+                </ul> 
+                </div>
+        </div>
         </header>
         <section class="row align-items-center justify-content-center section__myPhoto">
             <div class="col-12">
@@ -100,14 +126,14 @@
         </main>
         <footer>
             <div class="row background-color-09 align-items-center justify-content-between headerFooter__height">
-                <div class="col-2  padding-0">
+                <div class="col-auto  padding-0">
                     <a href="index.html"><img class="headerFooter__logo float-start" src="images/logo.png" alt="logo"></a>
                 </div>
-                <div class="col-7 padding-0  ">
-                    <p class="footer__p ">Designed by German Siliprandi</p>
+                <div class="col-auto col-md-auto padding-0   ">
+                    <p class="footer__p">Designed by German Siliprandi</p>
                 </div>
-                <div class="col-2 padding-0">
-                    <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0 headerFooter__contactLogosList ">   
+                <div class="col-auto padding-0">
+                    <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0">   
                         <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="images/github.png" alt="githubLink"></a></li>
                         <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="images/linkedin.png" alt="linkedinLink"></a></li>
                         <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="images/gmail.png" alt="mailLink"></a></li>
