--- a/pages/works.html
+++ b/pages/works.html
@@ -15,7 +15,7 @@
     <!--Bootstrap Works-->
     <div class="container-fluid">
         <header class="sticky-top">
-            <div class=" row mb-4 background-color-07 align-items-center justify-content-between headerFooter__height">
+            <div class=" row d-none d-md-flex mb-4 background-color-07 align-items-center justify-content-between headerFooter__height">
                 <div class="col-2 col-md-auto padding-0">
                     <a href="../index.html"><img class="headerFooter__logo float-start" src="../images/logo.png" alt="logo"></a>
                 </div>
@@ -37,6 +37,32 @@
                     </ul> 
                 </div>
             </div>
+            <div class="row d-flex d-md-none mb-4 background-color-07 align-items-center justify-content-between headerFooter__height">
+                <div class="col-auto padding-0">
+                <a href="../index.html"><img class="headerFooter__logo float-start" src="../images/logo.png" alt="logo"></a>
+                </div>
+                <div class=" col-auto padding-0 ">
+                    <a class="nav-link dropdown" data-bs-toggle="dropdown" href="" role="button" aria-expanded="false"><img src="/images/mobile_menu.png" alt="mobileMenu"></a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item bold" href="../index.html">Home</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item bold" href="../pages/works.html">Works</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item bold" href="../pages/about.html">About</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item bold" href="../pages/resume.html">Resume</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item bold" href="../pages/contact.html">Contact</a></li>
+                        </ul>
+                </div>
+                <div class="col-auto padding-0 ">
+                <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0 headerFooter__contactLogosList ">   
+                    <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="../images/github.png" alt="githubLink"></a></li>
+                    <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="../images/linkedin.png" alt="linkedinLink"></a></li>
+                    <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="../images/gmail.png" alt="mailLink"></a></li>
+                </ul> 
+                </div>
+        </div>
         </header>
         <main>
             <article>
@@ -118,14 +144,14 @@
         </article>
         <footer>
             <div class="row background-color-09 align-items-center justify-content-between headerFooter__height">
-                <div class="col-2  padding-0">
-                    <a href="../index.html"><img class="headerFooter__logo float-start" src="../images/logo.png" alt="logo"></a>
+                <div class="col-auto  padding-0">
+                    <a href="index.html"><img class="headerFooter__logo float-start" src="../images/logo.png" alt="logo"></a>
                 </div>
-                <div class="col-7 padding-0">
-                    <p class="footer__p ">Designed by German Siliprandi</p>
+                <div class="col-auto col-md-auto padding-0   ">
+                    <p class="footer__p">Designed by German Siliprandi</p>
                 </div>
-                <div class="col-2 padding-0">
-                    <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0 ">   
+                <div class="col-auto padding-0">
+                    <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0">   
                         <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="../images/github.png" alt="githubLink"></a></li>
                         <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="../images/linkedin.png" alt="linkedinLink"></a></li>
                         <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="../images/gmail.png" alt="mailLink"></a></li>
