--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         </div> 
                     </div>
                     <div class="col-md-auto padding-0 ">
-                    <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0 headerFooter__contactLogosList ">   
+                    <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0">   
                         <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="images/github.png" alt="githubLink"></a></li>
                         <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="images/linkedin.png" alt="linkedinLink"></a></li>
                         <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="images/gmail.png" alt="mailLink"></a></li>
@@ -41,17 +41,17 @@
                 <a href="index.html"><img class="headerFooter__logo float-start" src="images/logo.png" alt="logo"></a>
                 </div>
                 <div class=" col-auto padding-0 ">
-                    <a class="nav-link dropdown" data-bs-toggle="dropdown" href="" role="button" aria-expanded="false"><img src="/images/mobile_menu.png" alt="mobileMenu"></a>
+                    <a class="nav-link dropdown" data-bs-toggle="dropdown" href="" role="button" aria-expanded="false"><img src="images/mobile_menu.png" alt="mobileMenu"></a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item bold" href="index.html">Home</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item bold" href="/pages/works.html">Works</a></li>
+                            <li><a class="dropdown-item bold" href="pages/works.html">Works</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item bold" href="/pages/about.html">About</a></li>
+                            <li><a class="dropdown-item bold" href="pages/about.html">About</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item bold" href="/pages/resume.html">Resume</a></li>
+                            <li><a class="dropdown-item bold" href="pages/resume.html">Resume</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item bold" href="/pages/contact.html">Contact</a></li>
+                            <li><a class="dropdown-item bold" href="pages/contact.html">Contact</a></li>
                         </ul>
                 </div>
                 <div class="col-auto padding-0 ">
