--- a/pages/resume.html
+++ b/pages/resume.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Web Design, Front End, coding, programming, HTML, CSS, SASS, python"> 
-    <meta name="description" content="G.S Web Design owner's resume">
+    <meta name="description" content="G.D.S Web Design owner's resume">
     <link rel="stylesheet" href="../css/style_sass.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <title>G.S Web Design - Resume</title>
+    <title>G.D.S Web Design - Resume</title>
 </head>
 <body>
     <!-- Esta es la página resume en formato Grid-->
