--- a/pages/works.html
+++ b/pages/works.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Web Design, Front End, coding, programming, HTML, CSS, SASS, python"> 
-    <meta name="description" content="Here you can see all G.D.S Web Design works">
+    <meta name="description" content="Here you can see all G.S Web Design works">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/works_bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <title>G.D.S Web Design - Works</title>
+    <title>G.S Web Design - Works</title>
 </head>
 <body>
     <!--Bootstrap Works-->
