--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,156 +5,80 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Web Design, Front End, coding, programming, HTML, CSS, SASS, python"> 
-    <meta name="description" content="G.D.S Web Design specialize in Professional Front End Web Design for your business">
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/index_bootstrap.css">
+    <meta name="description" content="Contact me for a quotation or ask any questions you could have">
+    <link rel="stylesheet" href="../css/style_sass.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <title>G.D.S Web Design - Home</title>
+    <title>G.S Web Design - Contact</title>
 </head>
 <body>
-    <!--Bootstrap Index-->
-    <div class="container-fluid">
-        <header class="sticky-top">
-            <div class="row d-none d-md-flex mb-4 background-color-07 align-items-center justify-content-between headerFooter__height">
-                    <div class="col-md-auto padding-0">
-                    <a href="../index.html"><img class="headerFooter__logo float-start" src="../images/logo.png" alt="logo"></a>
-                    </div>
-                    <div class=" col-md-7 col-xl-6 justify-content-between padding-0  ">
-                        <div class="navbar padding-0  ">
-                            <a href="../index.html">Home </a>
-                            <a href="../pages/works.html">Works </a>
-                            <a href="../pages/about.html">About </a>
-                            <a href="../pages/resume.html">Resume </a>
-                            <a href="../pages/contact.html">Contact </a>
-                        </div> 
-                    </div>
-                    <div class="col-md-auto padding-0 ">
-                    <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0 ">   
-                        <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="../images/github.png" alt="githubLink"></a></li>
-                        <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="../images/linkedin.png" alt="linkedinLink"></a></li>
-                        <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="../images/gmail.png" alt="mailLink"></a></li>
-                    </ul> 
-                    </div>
-            </div>
-            <div class="row d-flex d-md-none mb-4 background-color-07 align-items-center justify-content-between headerFooter__height">
-                <div class="col-auto padding-0">
-                <a href="../index.html"><img class="headerFooter__logo float-start" src="../images/logo.png" alt="logo"></a>
-                </div>
-                <div class=" col-auto padding-0 ">
-                    <a class="nav-link dropdown" data-bs-toggle="dropdown" href="" role="button" aria-expanded="false"><img src="../images/mobile_menu.png" alt="mobileMenu"></a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item bold" href="../index.html">Home</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item bold" href="../pages/works.html">Works</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item bold" href="../pages/about.html">About</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item bold" href="../pages/resume.html">Resume</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item bold" href="../pages/contact.html">Contact</a></li>
-                        </ul>
-                </div>
-                <div class="col-auto padding-0 ">
-                <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0 headerFooter__contactLogosList ">   
-                    <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="../images/github.png" alt="githubLink"></a></li>
-                    <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="../images/linkedin.png" alt="linkedinLink"></a></li>
-                    <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="../images/gmail.png" alt="mailLink"></a></li>
-                </ul> 
-                </div>
-        </div>
-        </header>
-        <main>
-            <article>
-                <section>
-                    <div class="row justify-content-center align-items-center">
-                        <div class="col-12">
-                            <h1 class="text-decoration-none">If you want to contact me, please fill the form below and leave a message</h1>
-                        </div>
-                    </div>
-                    <div class="row justify-content-center align-items-center">
-                        <div class="col-12">
-                            <h1 class="text-decoration-none mb-4">I will reach you as soon as possible. (PAGE NOT AVAILABLE AT THE MOMENT. PLEASE SEND AN EMAIL)</h1>
-                        </div>
-                    </div>
-                </section>
-                <section>
-                <!-- Contact Form-->
-                    <form class="align-items-center" action="" name="client_info" method="GET">
-                        <div class="row mb-4 justify-content-center align-items-center">
-                            <div class="col-auto">   
-                                <label class="form-label" for="honorific">Choose an Honorific: </label>
-                            </div>
-                            <div class="col-auto">
-                                <select class="form-select form-select-sm" name="honorific" id="honorific">
-                                    <option value="Mx">Mx.</option>
-                                    <option value="Ms">Ms.</option>
-                                    <option value="Mr">Mr.</option>
-                                </select>
-                            </div>
-                        </div>
-                        <div class="row mb-4 justify-content-center align-items-center">
-                            <div class="col-auto">
-                                <label for="name">Name: </label>
-                            </div>
-                            <div class="col-auto">
-                                <input type="text" id="name" name="name" placeholder="Write your Name">
-                            </div>
-                        </div>
-                        <div class="row mb-4 justify-content-center align-items-center">
-                            <div class="col-auto">
-                                <label for="surname">Surname: </label>
-                            </div>
-                            <div class="col-auto">
-                                <input type="text" id="surname" name="surname" placeholder="Write your Surname">
-                            </div>
-                        </div>
-                        <div class="row mb-4 justify-content-center align-items-center">
-                            <div class="col-auto">
-                                <label for="email">E-Mail: </label>
-                            </div>
-                            <div class="col-auto">
-                                <input type="text" id="email" name="email" placeholder="Write your E-Mail">
-                            </div>
-                        </div>
-                        <div class="row mb-4 justify-content-center align-items-center">
-                            <div class="col-12 col-md-6">
-                        <textarea class="form-control" name="query" id="query" rows="10" placeholder="Please write your query"></textarea>
-                            </div>
-                        </div>
-                        <div class="row mb-4 justify-content-center align-items-center">
-                            <div class="col-auto">
-                                <label for="update_works">Would you like to be updated by E-mail about my latest works?</label>
-                                <input type="checkbox" id="update_works" name="update_works" value="1" >
-                            </div>
-                        </div>
-                        <div class="row mb-4 justify-content-center align-items-center">
-                            <div class="col-auto">
-                                <input type="reset" value="Clear Form">
-                                <input type="submit" value="Submit">
-                            </div>
-                        </div>
-                    </form>
-                </section>
-            </article>
-        </main>
-        <footer>
-            <div class="row background-color-09 align-items-center justify-content-between headerFooter__height">
-                <div class="col-auto  padding-0">
-                    <a href="../index.html"><img class="headerFooter__logo float-start" src="../images/logo.png" alt="logo"></a>
-                </div>
-                <div class="col-auto col-md-auto padding-0   ">
-                    <p class="footer__p">Designed by German Siliprandi</p>
-                </div>
-                <div class="col-auto padding-0">
-                    <ul class="list-group list-unstyled list-group-horizontal align-items-center justify-content-end padding-0">   
-                        <li><a href="https://github.com/GermanSiliprandi"><img class="headerFooter__contactLogos" src="../images/github.png" alt="githubLink"></a></li>
-                        <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img  class="headerFooter__contactLogos"src="../images/linkedin.png" alt="linkedinLink"></a></li>
-                        <li><a href="mailto:german.siliprandi@gmail.com"><img class="headerFooter__contactLogos" src="../images/gmail.png" alt="mailLink"></a></li>
-                    </ul> 
-                </div>
-            </div>
-        </footer>
-    </div>
-<script src="../js/bootstrap.bundle.min.js"> </script>
+    <!-- Esta es la página contact modo Flex-->
+    <header>
+        <a  href="../index.html" class="headerFooter__logo"><img src="../images/logo.png" alt="logo"></a>
+        <nav> 
+            <ul>
+                <li><a href="../index.html">Home </a></li>
+                <li><a href="../pages/works.html">Works </a></li>
+                <li><a href="../pages/about.html">About </a></li>
+                <li><a href="../pages/resume.html">Resume </a></li>
+                <li><a href="../pages/contact.html">Contact </a></li>
+            </ul>
+        </nav>
+        <ul class="headerFooter__contactLogos">
+            <li><a href="https://github.com/GermanSiliprandi"><img src="../images/github.png" alt="github link"></a></li>
+            <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img src="../images/linkedin.png" alt="linkedin link"></a></li>
+            <li><a href="mailto:german.siliprandi@gmail.com"><img src="../images/gmail.png" alt="mail link"></a></li>
+        </ul> 
+    </header>
+    <main>
+        <article>
+            <section>
+                <h1 class="noDecoration">If you want to contact me, please fill the form below and leave a message</h3>
+                <h1 class="noDecoration">I will contact you as soon as possible. (PAGE NOT AVAILABLE AT THE MOMENT. PLEASE SEND AN EMAIL)</h1>
+            </section>
+            <section class="text20 main__formulario">
+            <!-- Formulario de contacto-->
+                <form action="" name="client_info" method="GET">
+                    <label for="honorific">Choose an Honorific: </label>
+                    <select name="honorific" id="honorific">
+                        <option value="Mx.">Mx.</option>
+                        <option value="Ms.">Ms.</option>
+                        <option value="Mr.">Mr.</option>
+                    </select>
+                    <br/>
+                    <br/>
+                    <label for="name">Name: </label>
+                    <input type="text" id="name" name="name" placeholder="Write your Name">
+                    <br/>
+                    <br/>
+                    <label for="surname">Surname: </label>
+                    <input type="text" id="surname" name="surname" placeholder="Write your Surname">
+                    <br/>
+                    <br/>
+                    <label for="email">E-mail: </label>
+                    <input type="email" id="email" name="email" placeholder="Write your E-mail">
+                    <br/>
+                    <br/>
+                    <textarea name="query" id="query" cols="150" rows="20" placeholder="Please write your query"></textarea>
+                    <br/>
+                    <br/>
+                    <label for="update_works">Would you like to be updated by E-mail about my latest works?</label>
+                    <input type="checkbox" id="update_works" name="update_works" value="1" >
+                    <br/>
+                    <br/>
+                    <input type="reset" value="Clear Form">
+                    <input type="submit" value="Submit">
+                </form>
+            </section>
+        </article>
+    </main>
+    <footer>
+        <a  href="../index.html" class="headerFooter__logo"><img src="../images/logo.png" alt="logo"></a>
+        <p>Designed by German Siliprandi</p>
+        <ul class="headerFooter__contactLogos">   
+            <li><a href="https://github.com/GermanSiliprandi"><img src="../images/github.png" alt="github link"></a></li>
+            <li><a href="https://www.linkedin.com/in/german-daniel-siliprandi-2487a082/"><img src="../images/linkedin.png" alt="linkedin link"></a></li>
+            <li><a href="mailto:german.siliprandi@gmail.com"><img src="../images/gmail.png" alt="mail link"></a></li>
+        </ul> 
+    </footer>
 </body>
 </html>
