--- a/pages/works.html
+++ b/pages/works.html
@@ -42,7 +42,7 @@
                 <a href="../index.html"><img class="headerFooter__logo float-start" src="../images/logo.png" alt="logo"></a>
                 </div>
                 <div class=" col-auto padding-0 ">
-                    <a class="nav-link dropdown" data-bs-toggle="dropdown" href="" role="button" aria-expanded="false"><img src="/images/mobile_menu.png" alt="mobileMenu"></a>
+                    <a class="nav-link dropdown" data-bs-toggle="dropdown" href="" role="button" aria-expanded="false"><img src="../images/mobile_menu.png" alt="mobileMenu"></a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item bold" href="../index.html">Home</a></li>
                             <li><hr class="dropdown-divider"></li>
