--- a/pages/about.html
+++ b/pages/about.html
@@ -12,7 +12,7 @@
     <title>G.D.S Web Design - Home</title>
 </head>
 <body>
-    <!--Bootstrap Index-->
+    <!--Bootstrap About-->
     <div class="container-fluid">
         <header class="sticky-top">
             <div class="row d-none d-md-flex mb-4 background-color-07 align-items-center justify-content-between headerFooter__height">
