--- a/pages/resume.html
+++ b/pages/resume.html
@@ -136,7 +136,7 @@
                             </li>
                         </ul>
                         <ul class=" list-group resume__rowHeight radial-gradient jobExperience col-3 list-unstyled align-items-center ">
-                            <li><h2>Product Engineert</h2></li>
+                            <li><h2>Product Engineer</h2></li>
                             <li><h2>Dunlop Argentina S.A.</h2></li>
                             <li><h2> 11/2020 - Present </h2></li>
                         <!-- Unordered job tasks list -->
