--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <section>
                     <p class="mt-1 mb-1">Hi, my name is German Siliprandi, I live in Buenos Aires, Argentina, and I'm a chemical engineer turned web designer.</p>
                     <p class="mt-1 mb-1"> It was about 2018 when I found out that I loved programming, first in python and then Javascript.</p>
-                    <p class="mt-1 mb-1">In 2021 I realized I wanted to be a Digital Nomad, and started the "Full stack Web developer" career in Coderhouse, in order to specialize and work in what I love and travel with my girlfriend at the same time. </p>
+                    <p class="mt-1 mb-1">In 2021 I realized I wanted to be a Digital Nomad, and started the "Full Stack Web Developer" career in Coderhouse, in order to specialize and work in what I love and travel with my girlfriend at the same time. </p>
                     <p class="mt-1 mb-1"> I'm currently expanding my personal portfolio and seeking for a job as a web developer</p>
                     <p class="mt-1 mb-1">For more Information about my works and myself, click on the "Works", "About", and "Resume" links in the Menu</p>
                 </section> 
